Fixed: OXUIB-79 Text “Carnet d’adresses” doesn’t fit to button
Root cause: Missing css rules for edge case: Icon title with two text lines and different behavior of the browser.
Solution: Adjust css for height description.

--- a/ui/apps/themes/components/launcher.less
+++ b/ui/apps/themes/components/launcher.less
@@ -368,6 +368,10 @@
         }
     }
 
+    a.lcell {
+        height: @launcher-size;
+    }
+
     .lcell {
         display: flex;
         flex-direction: column;
@@ -376,7 +380,7 @@
         white-space: normal;
 
         margin: @launcher-spacing;
-        height: @launcher-size;
+        height: 84px;
         width: @launcher-size;
 
         svg.indicator { display: none; }
@@ -400,7 +404,6 @@
             font-size: @launcher-text-size;
             text-align: center;
             width: @launcher-size;
-            margin-bottom: 7px;
             .smartphone & {
                 font-size: 14px;
                 top: 70%;
